--- a/erpnext/public/css/leaflet/leaflet.css
+++ b/erpnext/public/css/leaflet/leaflet.css
@@ -275,7 +275,7 @@
 }
 
 .leaflet-container a {
-    color: #0078A8;
+    color: #FF5757;
 }
 
 .leaflet-container a.leaflet-active {
@@ -283,7 +283,7 @@
 }
 
 .leaflet-zoom-box {
-    border: 2px dotted #38f;
+    border: 2px dotted #FF5757;
     background: rgba(255, 255, 255, 0.5);
 }
 
